--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'org.asciidoctor.convert' version '1.5.9.2'
     id 'java'
     id "org.sonarqube" version "3.4.0.2513"
+    id 'jacoco'
 }
 
 group = 'com.woowacourse'
@@ -71,5 +72,20 @@ sonarqube {
         property "sonar.projectKey", "sure-why-not_sonar-cloud-test"
         property "sonar.organization", "sure-why-not"
         property "sonar.host.url", "https://sonarcloud.io"
+    }
+}
+
+jacoco {
+    // JaCoCo 버전
+    toolVersion = "0.8.8"
+}
+
+jacocoTestReport {
+    dependsOn test // 리포트 생성 전에 test를 반드시 수행해야 한다!
+    reports { // 어떤 파일들을 생성할지, 어디에 생성할지 설정
+        xml.enabled true // xml과 html형식으로 결과물을 만들어내라!
+        html.enabled true
+        csv.enabled true
+        // 경로 명시 안 할 경우 기본 경로는 build/reports/jacoco 이하 경로
     }
 }
